--- a/index.html
+++ b/index.html
@@ -1,73 +1,76 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>강승규의 GitHub 페이지</title>
-  <link rel="stylesheet" href="path/to/bootstrap.css">
-  <link rel="stylesheet" href="path/to/your/custom.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>승규 강의 개인 홈페이지</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-  <!-- 기존 섹션들 -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <span class="d-block d-lg-none">승규 강</span>
+            <span class="d-none d-lg-block">
+                <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+            </span>
+        </a>
+        <div class="navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">소개</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">나의 스킬</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">프로젝트</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#career">희망 직무</a></li>
+            </ul>
+        </div>
+    </nav>
 
-  <!-- 스킬 섹션 -->
-  <section id="skills" class="bg-light text-center">
-    <div class="container">
-      <h2 class="text-uppercase text-secondary mb-0">나의 스킬</h2>
-      <hr class="star-dark mb-5">
-      <div class="row">
-        <div class="col-lg-6">
-          <p class="lead">JavaScript</p>
-        </div>
-        <div class="col-lg-6">
-          <p class="lead">C 언어</p>
-        </div>
-      </div>
+    <div class="container-fluid p-0">
+        <section id="about" class="resume-section">
+            <div class="resume-section-content">
+                <h1 class="mb-0">승규
+                    <span class="text-primary">강</span>
+                </h1>
+                <div class="subheading mb-5">
+                    <a href="mailto:your-email@example.com">your-email@example.com</a>
+                </div>
+                <p class="lead mb-5">저는 승규 강입니다. 이 웹사이트는 저의 개인 프로젝트와 개발 스킬을 소개하기 위해 만들어졌습니다.</p>
+            </div>
+        </section>
+
+        <section id="skills" class="resume-section">
+            <div class="resume-section-content">
+                <h2 class="mb-5">나의 스킬</h2>
+                <ul>
+                    <li>자바스크립트 (JavaScript)</li>
+                    <li>C언어 (C Programming)</li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="projects" class="resume-section">
+            <div class="resume-section-content">
+                <h2 class="mb-5">프로젝트</h2>
+                <ul>
+                    <li>부산행 게임: 좀비 영화를 게임으로 제작</li>
+                    <li>오징어게임: 드라마를 게임으로 제작</li>
+                    <li>프로젝트 3: 웹 기반 채팅 애플리케이션 (예정)</li>
+                    <li>프로젝트 4: 스마트 홈 자동화 시스템 (예정)</li>
+                    <li>프로젝트 5: 인공지능 기반 추천 시스템 (예정)</li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="career" class="resume-section">
+            <div class="resume-section-content">
+                <h2 class="mb-5">희망 직무</h2>
+                <p>웹 개발자 또는 게임 개발자</p>
+            </div>
+        </section>
     </div>
-  </section>
 
-  <!-- 프로젝트 섹션 -->
-  <section id="projects">
-    <div class="container">
-      <h2 class="text-center text-uppercase text-secondary mb-0">프로젝트</h2>
-      <hr class="star-dark mb-5">
-      <div class="row">
-        <div class="col-md-4">
-          <h3>부산행 게임</h3>
-          <p>좀비 영화 부산행을 기반으로 한 게임 프로젝트입니다.</p>
-        </div>
-        <div class="col-md-4">
-          <h3>오징어 게임</h3>
-          <p>드라마 오징어 게임을 기반으로 한 게임 프로젝트입니다.</p>
-        </div>
-        <div class="col-md-4">
-          <h3>AI 챗봇</h3>
-          <p>AI를 활용한 챗봇 개발 프로젝트 (예정).</p>
-        </div>
-        <div class="col-md-4">
-          <h3>웹 크롤러</h3>
-          <p>웹 데이터를 수집하는 크롤러 개발 프로젝트 (예정).</p>
-        </div>
-        <div class="col-md-4">
-          <h3>블록체인 애플리케이션</h3>
-          <p>블록체인 기술을 활용한 애플리케이션 개발 프로젝트 (예정).</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- 희망 직무 섹션 -->
-  <section id="career">
-    <div class="container">
-      <h2 class="text-center text-uppercase text-secondary mb-0">희망 직무</h2>
-      <hr class="star-dark mb-5">
-      <p class="lead text-center">웹 개발 및 게임 개발</p>
-    </div>
-  </section>
-
-  <!-- 스크립트 및 기타 리소스 -->
-  <script src="path/to/jquery.js"></script>
-  <script src="path/to/bootstrap.js"></script>
-  <script src="path/to/your/custom.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
