--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <h1 class="name">강승규</h1>
+                        <h1 class="name">20192643 수학과 강승규</h1>
                         <hr class="star-light">
                         <span class="skills">웹 프로그래머 또는 게임 프로그래머</span>
                     </div>
@@ -305,7 +305,7 @@
                             <h2>부산행 게임</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>부산행 영화를 게임 형태로 제작하는 프로젝트입니다. 플레이어는 좀비들로부터 탈출하면서 생존해야 합니다.</p>
+                            <p>부산행 영화를 c언어로 만든 게임 형태로 제작한 프로젝트입니다. 플레이어는 확률을통해 시민과 마동석을 움직이면서 좀비들로부터 시민을 탈출시키는 프로젝트 .</p>
                             <ul class="list-inline item-details">
                                 <li>클라이언트:
                                     <strong><a href="#">개인 프로젝트</a>
@@ -343,7 +343,7 @@
                             <h2>오징어 게임</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>오징어 게임 드라마를 기반으로 한 게임 제작 프로젝트입니다. 플레이어는 다양한 게임을 통해 최후의 생존자가 되어야 합니다.</p>
+                            <p>오징어 게임 드라마를 기반으로 한 c언어로 만든 게임 제작 프로젝트입니다. 플레이어는 줄달리기 통해 최후의 생존자가 되어야 합니다.</p>
                             <ul class="list-inline item-details">
                                 <li>클라이언트:
                                     <strong><a href="#">개인 프로젝트</a>
@@ -381,7 +381,7 @@
                             <h2>인공지능 퀴즈 앱</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>인공지능을 활용한 퀴즈 애플리케이션 개발 프로젝트입니다. 사용자는 다양한 주제에 대한 퀴즈를 풀고 점수를 기록할 수 있습니다.</p>
+                            <p>인공지능을 활용한 퀴즈 애플리케이션. 사용자는 다양한 주제에 대한 퀴즈를 풀고 점수를 기록할 수 있습니다.(예정)</p>
                             <ul class="list-inline item-details">
                                 <li>클라이언트:
                                     <strong><a href="#">개인 프로젝트</a>
@@ -419,7 +419,7 @@
                             <h2>온라인 쇼핑몰</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
-                            <p>전자상거래 웹사이트 구축 프로젝트입니다. 사용자는 다양한 상품을 검색하고 구매할 수 있습니다.</p>
+                            <p>웹개발을 통하여 만든 인터넷 쇼핑몰이나 쿠팡같은 사이트 만들기(예정)</p>
                             <ul class="list-inline item-details">
                                 <li>클라이언트:
                                     <strong><a href="#">개인 프로젝트</a>
@@ -457,7 +457,7 @@
                             <h2>개인 블로그</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>개인 블로그 및 포트폴리오 사이트 제작 프로젝트입니다. 블로그 게시물 작성 및 프로젝트 포트폴리오를 관리할 수 있습니다.</p>
+                            <p>웹개발과 ai를 활용하여 뉴스같은거 만들어보기(예정)</p>
                             <ul class="list-inline item-details">
                                 <li>클라이언트:
                                     <strong><a href="#">개인 프로젝트</a>
