--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="Cabin">
+                         <img src="/mnt/data/부산행.webp" class="img-responsive" alt="부산행">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -108,7 +108,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="Slice of cake">
+                        <img src="/mnt/data/오징어게임.png" class="img-responsive" alt="오징어 게임">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -118,7 +118,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="Circus tent">
+                       <img src="/mnt/data/인공지능.jfif" class="img-responsive" alt="인공지능 퀴즈 앱">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -128,7 +128,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="Game controller">
+                        <img src="/mnt/data/이미지 쇼핑몰.jfif" class="img-responsive" alt="온라인 쇼핑몰">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -138,7 +138,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="Safe">
+                        <img src="/mnt/data/인터넷 뉴스.jfif" class="img-responsive" alt="개인 블로그">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
