--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/mnt/data/오징어게임.png" class="img-responsive" alt="오징어 게임">
+                        <img src="img/portfolio/오징어게임.png" class="img-responsive" alt="오징어 게임">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -118,7 +118,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                       <img src="/mnt/data/인공지능.jfif" class="img-responsive" alt="인공지능 퀴즈 앱">
+                       <img src="img/portfolio/인공지능.png" class="img-responsive" alt="인공지능 퀴즈 앱">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -128,7 +128,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/mnt/data/이미지 쇼핑몰.jfif" class="img-responsive" alt="온라인 쇼핑몰">
+                        <img src="img/portfolio/이미지 쇼핑몰.png" class="img-responsive" alt="온라인 쇼핑몰">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -138,7 +138,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/mnt/data/인터넷 뉴스.jfif" class="img-responsive" alt="개인 블로그">
+                        <img src="img/portfolio/인터넷 뉴스.png" class="img-responsive" alt="개인 블로그">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
