--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                         <img src="/mnt/data/부산행.webp" class="img-responsive" alt="부산행">
+                         <img src="img/portfolio/부산행.png" class="img-responsive" alt="부산행">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -304,7 +304,7 @@
                         <div class="modal-body">
                             <h2>부산행 게임</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/부산행.png" class="img-responsive img-centered" alt="">
                             <p>부산행 영화를 c언어로 만든 게임 형태로 제작한 프로젝트입니다. 플레이어는 확률을통해 시민과 마동석을 움직이면서 좀비들로부터 시민을 탈출시키는 프로젝트 .</p>
                             <ul class="list-inline item-details">
                                 <li>클라이언트:
@@ -312,7 +312,7 @@
                                     </strong>
                                 </li>
                                 <li>날짜:
-                                    <strong><a href="#">2024</a>
+                                    <strong><a href="#">2023</a>
                                     </strong>
                                 </li>
                                 <li>서비스:
@@ -342,7 +342,7 @@
                         <div class="modal-body">
                             <h2>오징어 게임</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/오징어게임.png" class="img-responsive img-centered" alt="">
                             <p>오징어 게임 드라마를 기반으로 한 c언어로 만든 게임 제작 프로젝트입니다. 플레이어는 줄달리기 통해 최후의 생존자가 되어야 합니다.</p>
                             <ul class="list-inline item-details">
                                 <li>클라이언트:
@@ -380,7 +380,7 @@
                         <div class="modal-body">
                             <h2>인공지능 퀴즈 앱</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/인공지능.png" class="img-responsive img-centered" alt="">
                             <p>인공지능을 활용한 퀴즈 애플리케이션. 사용자는 다양한 주제에 대한 퀴즈를 풀고 점수를 기록할 수 있습니다.(예정)</p>
                             <ul class="list-inline item-details">
                                 <li>클라이언트:
@@ -388,7 +388,7 @@
                                     </strong>
                                 </li>
                                 <li>날짜:
-                                    <strong><a href="#">2024</a>
+                                    <strong><a href="#">2025~</a>
                                     </strong>
                                 </li>
                                 <li>서비스:
@@ -418,7 +418,7 @@
                         <div class="modal-body">
                             <h2>온라인 쇼핑몰</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/이미지 쇼핑몰.png" class="img-responsive img-centered" alt="">
                             <p>웹개발을 통하여 만든 인터넷 쇼핑몰이나 쿠팡같은 사이트 만들기(예정)</p>
                             <ul class="list-inline item-details">
                                 <li>클라이언트:
@@ -426,7 +426,7 @@
                                     </strong>
                                 </li>
                                 <li>날짜:
-                                    <strong><a href="#">2024</a>
+                                    <strong><a href="#">2025~</a>
                                     </strong>
                                 </li>
                                 <li>서비스:
@@ -454,9 +454,9 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>개인 블로그</h2>
+                            <h2>인터넷 뉴스</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/인터넷 뉴스.png" class="img-responsive img-centered" alt="">
                             <p>웹개발과 ai를 활용하여 뉴스같은거 만들어보기(예정)</p>
                             <ul class="list-inline item-details">
                                 <li>클라이언트:
@@ -464,7 +464,7 @@
                                     </strong>
                                 </li>
                                 <li>날짜:
-                                    <strong><a href="#">2024</a>
+                                    <strong><a href="#">2025~</a>
                                     </strong>
                                 </li>
                                 <li>서비스:
