--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="intro-text">
                         <h1 class="name">20192643 수학과 강승규</h1>
                         <hr class="star-light">
-                        <span class="skills">웹 프로그래머 또는 게임 프로그래머</span>
+                        <span class="skills">나의 스킬:C언어 또는 자바스크립트</span>
                     </div>
                 </div>
             </div>
